--- a/template.html
+++ b/template.html
@@ -27,6 +27,7 @@
     </div>
     <hr><br>
     <div id="output" class="text-center font-monospace"></div>
+    <div id="msg" class="text-center"></div>
     <script type="text/javascript" src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
